Ecampus.Services.Profile/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: profile                 # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: profile               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: voonya/profile    # образ Docker
          volumeMounts:
            - mountPath: /usr/share/profile/profiles
              name: profile
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: profile            # ім'я контейнеру
          ports:
            - containerPort: 8080  # порт по якому можна звертатись до поди
      volumes:
        - name: profile
          persistentVolumeClaim:
            claimName: profile
