Ecampus.Services.Profile/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/profile
            pathType: "Prefix"
            backend:
              service:
                name: profile-service
                port:
                  number: 80
